--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 github_username:  feyncalc
 #timezone: Europe/Berlin
-include: ["_pages","FeynCalcBook","Images"]
+include: ["_pages","FeynCalcBook","Images","FeynCalcExamplesMD"]
 
 github:
   repo: https://github.com/FeynCalc
